k8/istio/app-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: fluffy-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fluffy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/status: '{"version":"e2cb9d4837cda9584fd272bfa1f348525bcaacfadb7e9b9efbd21a3bb44ad7a1","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null}'
      creationTimestamp: null
      labels:
        app: fluffy
        istio.io/rev: ""
        security.istio.io/tlsMode: istio
        service.istio.io/canonical-name: fluffy
        service.istio.io/canonical-revision: latest
    spec:
      containers:
      - env:
        - name: SQLALCHEMY_DATABASE_URI
          value: mysql://root:password@db/fluffy?charset=utf8
        - name: APP_SECRET_KEY
          value: xi3aiGiewip1ze7MFei9haotvoo9Wo4k
        - name: SQLALCHEMY_TRACK_MODIFICATIONS
          value: "False"
        - name: ADMIN_USER
          value: admin
        - name: DEMO_USER
          value: demo
        - name: DEMO_PASSWORD
          value: Demo1234
        - name: ADMIN_PASSWORD
          value: Oothai1y@Z3e5fzGa@2hV1aes
        - name: RECAPTCHA_PUBLIC_KEY
          value: 6Ldqcf4UAAAAAEmu7JKm4ILrsrkFTDWll03NsZ3U
        - name: RECAPTCHA_PRIVATE_KEY
          value: 6Ldqcf4UAAAAAPx_ypVSEyxnLMzVEJxX9C2Jau1u
        - name: DEBUG_METRICS
          value: "false"
        image: maradwan/fluffy:v3
        livenessProbe:
          httpGet:
            path: /app-health/fluffy/livez
            port: 15020
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        name: fluffy
        ports:
        - containerPort: 5000
        resources: {}
      - args:
        - proxy
        - sidecar
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --serviceCluster
        - fluffy.$(POD_NAMESPACE)
        - --proxyLogLevel=warning
        - --proxyComponentLogLevel=misc:error
        - --concurrency
        - "2"
        image: docker.io/istio/proxyv2:1.8.1
        imagePullPolicy: Always
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /healthz/ready
            port: 15021
          initialDelaySeconds: 1
          periodSeconds: 2
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "2"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1337
          runAsNonRoot: true
          runAsUser: 1337
        volumeMounts:
        - mountPath: /var/run/secrets/istio
          name: istiod-ca-cert
        - mountPath: /var/lib/istio/data
          name: istio-data
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /var/run/secrets/tokens
          name: istio-token
        - mountPath: /etc/istio/pod
          name: istio-podinfo
      securityContext:
        fsGroup: 1337
      volumes:
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - emptyDir: {}
        name: istio-data
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              fieldPath: metadata.annotations
            path: annotations
        name: istio-podinfo
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - configMap:
          name: istio-ca-root-cert
        name: istiod-ca-cert
status: {}
---
