k8/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fluffy
spec:
  host: app
  subsets:
  - name: app
    labels:
      app: fluffy
